# text-my-mom

./: Dockerfile  README.md  pyproject.toml  worker.py
src/: worker.py
