[tool.poetry]
name = "text-my-mom"
version = "0.1.0"
description = "sometimes i forget to text my mom, so i created an llm flow to do it for me"
authors = ["gabriel ruttner <gabriel.ruttner@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
hatchet-sdk = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
